<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wayfinder_dvl</name>
  <version>0.1.0</version>
  <description>Teledyne Wayfinder DVL package ROS2</description>
  <maintainer email="nfpb1993@gmail.com">kabronius</maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>wayfinder_dvl_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dvl</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
